fixed problem with whitespace on the right of the index page

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -26,8 +26,13 @@ body {
     bottom: 0;
     left: 0;
     text-align: center;
+    
 }
 
 #myModal {
     color: black;
+}
+
+.fixed-row{
+    margin-right: auto;
 }
